--- a/website/i18n/fr/docusaurus-plugin-content-blog-newsletter/141/index.mdx
+++ b/website/i18n/fr/docusaurus-plugin-content-blog-newsletter/141/index.mdx
@@ -9,7 +9,7 @@ unlisted: true
 
 Salut à tous !
 
-<Todo />
+Promo appjs? attente de code promo
 
 <!-- truncate -->
 
@@ -40,7 +40,63 @@ React-admin, c'est 6 ans de développement, plus de 20 000 développeurs convain
 
 ## ⚛️ React {#react}
 
-<Todo />
+[React, Visualized](https://react.gg/visualized)
+
+https://twitter.com/tylermcginnis/status/1645492728011317248
+
+---
+
+[Next.js 13.3](https://nextjs.org/blog/next-13-3)
+
+https://twitter.com/vercel/status/1644092621218873351
+
+https://twitter.com/ctnicholasdev/status/1644130884323536899
+
+https://www.youtube.com/watch?v=gSSsZReIFRk
+
+https://nextjs.org/docs/advanced-features/instrumentation
+
+https://twitter.com/timneutkens/status/1645795928463532035
+
+https://twitter.com/ctnicholasdev/status/1645797419920269312
+
+https://twitter.com/delba_oliveira/status/1645840553597362176
+
+---
+
+[Modern.js](https://modernjs.dev/en)
+
+https://github.com/web-infra-dev/modern.js
+
+---
+
+https://claritydev.net/blog ?
+
+---
+
+I hate React. I’m not alone.
+
+https://medium.com/@corbbin/i-hate-react-im-not-alone-f6f476eec18f
+
+---
+
+- [Next.js RFC - next/third-parties](https://github.com/vercel/next.js/discussions/48256)
+- [Server-side render dates across timezones with Remix](https://www.jacobparis.com/guides/remix-ssr-dates)
+- [Learn Laravel Routing Techniques for Next.js](https://www.luckymedia.dev/blog/learn-laravel-routing-techniques-for-next-js)
+- [Deno SaaS Kit](https://github.com/denoland/saaskit): boilerplate officiel proposé par Deno pour créer des SaaS basé sur Fresh et Preact.
+- [Fighting inter-component HTML bloat](https://elisehe.in/2023/03/27/minimal-html-in-design-systems.html)
+- [NextJS - SPA or MPA?](https://www.code-insights.dev/posts/nextjs-spa-or-mpa)
+- [The future of Chakra UI](https://www.adebayosegun.com/blog/the-future-of-chakra-ui) + https://twitter.com/thesegunadebayo/status/1643706973341335553
+- [Lee Robinson - "Nextjs now automatically restarts your local dev server when you make changes to `next.config.js`"](https://twitter.com/leeerob/status/1643847173019439104)
+- [Generate open graph social preview images with Remix](https://www.jacobparis.com/guides/remix-og) + https://twitter.com/jacobmparis/status/1645090848286048259
+- [Secret React Server Component Patterns They Don't Want You To Know](https://www.youtube.com/watch?v=ciQdQkT0bZk)
+- [Next-Auth v4.22 - Route Handlers support](https://twitter.com/nextauthjs/status/1645004172725551104)
+- [React Server Components without NextJS - A 1 minute guide](https://twitter.com/BHolmesDev/status/1643990398824763393)
+- [React Aria Components alpha](https://twitter.com/devongovett/status/1643988004577619971): et d'autres updates React-Aria + React-Spectrum.
+- [Astro 2.2](https://astro.build/blog/astro-220/)
+- [Framework popularity on Netlify](https://www.netlify.com/blog/framework-popularity-on-netlify/)
+- [Vercel Adds Remix: Integration Supports Larger Apps](https://thenewstack.io/vercel-adds-remix-integration-supports-larger-apps/)
+- [next-seo v6](https://github.com/garmeeh/next-seo/releases/tag/v6.0.0)
 
 <SubscribeFormEmbed />
 
@@ -73,7 +129,17 @@ Watch the [4-min demo video](https://www.youtube.com/watch?v=zRkeKSZjlyw)
 
 - https://www.bam.tech/article/managing-environment-variables-securely-in-react-native
 
-<Todo />
+- promo chainreact + appjs?
+
+- https://twitter.com/Baconbrix/status/1645477524606943248
+
+- [The New Architecture Performance Benchmarks](https://github.com/reactwg/react-native-new-architecture/discussions/123) + https://twitter.com/SamuelSusla/status/1643637613771751427
+- [Soon: Environment Variables in Expo](https://twitter.com/Baconbrix/status/1644731840132169728)
+- [freeCodeCamp React-Native Course](https://www.youtube.com/watch?v=obH0Po_RdWk)
+- [react-native-keyboard-controller 1.5](https://twitter.com/ziusko/status/1645322969453932576): interactive keyboard, possibilité de fermer le clavier avec un geste
+- [How to Create an Expo App with React-Native Firebase](https://www.youtube.com/watch?v=mZlKwRV4MC8)
+- ["Hermes recently surpassed JavaScriptCore as the most popular JavaScript engine in EAS Build!"](https://twitter.com/expo/status/1645540179724353536)
+- [Expo - M1/M2 Migration Timeline for EAS Build](https://blog.expo.dev/m1-m2-migration-timeline-for-eas-build-22bd6c49f1b3)
 
 ---
 
@@ -105,16 +171,32 @@ Pas de contenu cette semaine 😅
 
 ## 🔀 Autre {#other}
 
-<Todo />
+- [Node.js 19.9](https://nodejs.org/en/blog/release/v19.9.0)
+- [Vitest 0.30](https://twitter.com/sheremet_va/status/1645063635712999427)
+- [lazyrepo - Caching task runner for npm/pnpm/yarn monorepos](https://github.com/ds300/lazyrepo)
+- [AWS Lambda introduces response payload streaming](https://aws.amazon.com/fr/about-aws/whats-new/2023/04/aws-lambda-response-payload-streaming/)
+- [JSPM CLI Relaunch](https://jspm.org/jspm-cli): package management basé sur les import maps qui sont enfin dispo dans tous les navigateurs
+- [Vercel - Improved Node.js compatibility for Edge Middleware and Edge Functions](https://vercel.com/changelog/improved-node-js-compatibility-for-edge-middleware-and-edge-functions)
+- [W3C - First public draft - Badging API](https://www.w3.org/blog/news/archives/9878)
 
 ---
 
 ## 🤭 Fun {#fun}
 
-<Todo />
+https://twitter.com/galstar/status/1645638031473254400
+
+https://twitter.com/GabrielVergnaud/status/1645005803131138049
+
+https://twitter.com/trashh_dev/status/1644162037097066496
+
+https://twitter.com/CherryJimbo/status/1643778121944952833
+
+https://twitter.com/sebastienlorber/status/1645823352693506048
+
+https://twitter.com/RozenMD/status/1643918966165848065
+
+https://twitter.com/aarondjents/status/1645805840295919618
 
 [![alt](/emails/issues/122/meme.jpg)](https://twitter.com/TODOTODOTODOTODOTODOTODOTODOTODOTODOTODO)
-
-🤣 [Les autres tweets marrant cette semaine](https://twitter.com/TODOTODOTODOTODOTODOTODOTODOTODOTODOTODO)
 
 A plus 👋
