--- a/website/i18n/fr/docusaurus-plugin-content-blog-newsletter/149/index.mdx
+++ b/website/i18n/fr/docusaurus-plugin-content-blog-newsletter/149/index.mdx
@@ -127,14 +127,14 @@ https://deploy-preview-3725--react-native.netlify.app/blog/2023/06/21/0.72-metro
 
 ---
 
-- 💬 [New Renderer Interop Layer](https://twitter.com/cortinico/status/1671089178107363329)
+- 💬 [New Renderer Interop Layer](https://twitter.com/cortinico/status/1671089178107363329): avec la v0.72, une couche interop expérimentale permet l'usage de composants React-Native legacy avec le nouveau renderer Fabric. Cela permet une adoption incrémentale de la nouvelle architecture.
 - 💬 [Upcoming changes for libraries in React Native 0.73 - Android](https://github.com/react-native-community/discussions-and-proposals/issues/671): il faudra ajouter un namespace sur le build Gradle.
-- 👀 [React-Native macOS 0.71 - Enable New Architecture on init template](https://github.com/microsoft/react-native-macos/pull/1853)
+- 👀 [React-Native macOS 0.71 - New Architecture on init template](https://github.com/microsoft/react-native-macos/pull/1853)
 - 👀 [1/5 of the top 100 Medical apps in the App Store use React Native](https://twitter.com/Baconbrix/status/1671171049336221697)
 - 👀 [Expo Updates - upcoming Brotli compression support](https://twitter.com/JI/status/1671368239463690240)
-- 📜 [Environment Variables in React Native: The Right Way!](https://elazizi.com/posts/environment-variables-in-react-native-the-right-way/)
-- 📦 [react-native-mmkv 2.9](https://twitter.com/mrousavy/status/1671127232113266689)
+- 📜 [Environment Variables in React Native: The Right Way](https://elazizi.com/posts/environment-variables-in-react-native-the-right-way/): une méthode typesafe pour charger et accéder aux variables d'environnement dans un contexte Expo.
 - 📦 [react-native-colo-loco 1.1 - Colocate native and js code](https://twitter.com/jamonholmgren/status/1671009094545846273)
+- 📦 [react-native-mmkv 2.9 - RN 0.73 support](https://twitter.com/mrousavy/status/1671127232113266689)
 - 📦 [Maestro 1.29](https://twitter.com/mobile__dev/status/1670940310460043266)
 - 🎙️ [RNR 269 - React Native VisionCamera v3 with Marc Rousavy](https://reactnativeradio.com/episodes/rnr-269-react-native-visioncamera-v3-with-marc-rousavy)
 
