--- a/website/i18n/fr/docusaurus-plugin-content-blog-newsletter/159/index.mdx
+++ b/website/i18n/fr/docusaurus-plugin-content-blog-newsletter/159/index.mdx
@@ -55,6 +55,8 @@ Unlock enterprise-grade features, functions, and UI components completely free f
 
 [![highlight.io - The open-source, full-stack Monitoring Platform](/emails/issues/159/highlight.jpg)](http://highlight.io)
 
+[**highlight.io - The open-source, full-stack Monitoring Platform**](http://highlight.io)
+
 [**highlight.io**](http://highlight.io) is a fully open-source Session Replay, Error Monitoring, and Logging platform for your next project.
 
 Don't waste time trying to guess why a bug occurs. Instead, use highlight Session Replay and get a clear picture of whatever happens in the browser: console logs, errors, and network requests.
