--- a/website/i18n/fr/docusaurus-plugin-content-blog-newsletter/159/index.mdx
+++ b/website/i18n/fr/docusaurus-plugin-content-blog-newsletter/159/index.mdx
@@ -8,6 +8,10 @@ unlisted: true
 
 Salut à tous !
 
+React Advanced:
+
+- 👥 [React Advanced](https://reactadvanced.com/?utm_source=email&utm_medium=thisweekinreact) (Londres 🇬🇧, 20-23 Octobre) nous offre [-10% - code "REACT10"](https://ti.to/gitnation/react-advanced-london-2023/discount/REACT10)
+
 <Todo />
 
 <!-- truncate -->
@@ -44,8 +48,8 @@ Unlock enterprise-grade features, functions, and UI components completely free f
 <Todo />
 
 - 💸 [Zero To Shipped - Master Fast-Paced Fullstack Development and **Finally** ship that product](https://www.zerotoshipped.com/)
-- 👥 [reactjsday](https://2023.reactjsday.it/) (Verona 🇮🇹, Octobre 27, 2023) is offering us [-10% on conference tickets](https://ti.to/grusp/reactjsday-2023/discount/media_TWIR) with code "media_TWIR"
-- 👥 [React Advanced](https://reactadvanced.com/) (London, Octobre 20-23, 2023) is offering us [-10% on conference tickets](https://TODO.COM) with code "XXX" **TODO**
+- 👥 [reactjsday](https://2023.reactjsday.it/) (Verone 🇮🇹, 27 Octobre) nous offre [-10% - code "media_TWIR"](https://ti.to/grusp/reactjsday-2023/discount/media_TWIR)
+- 👥 [React Advanced](https://reactadvanced.com/?utm_source=email&utm_medium=thisweekinreact) (Londres 🇬🇧, 20-23 Octobre) nous offre [-10% - code "REACT10"](https://ti.to/gitnation/react-advanced-london-2023/discount/REACT10)
 
 <SubscribeFormEmbed placement="middle" />
 
