--- a/website/i18n/fr/docusaurus-plugin-content-blog-newsletter/187/index.mdx
+++ b/website/i18n/fr/docusaurus-plugin-content-blog-newsletter/187/index.mdx
@@ -7,11 +7,11 @@ date: 05-29-2024
 
 Salut à tous !
 
-Last week we got great announcements from Vercel Ship and App.js conferences.
+La semaine dernière, nous avons reçu de formidables annonces lors des conférences Vercel Ship et App.js.
 
-I also found the community blog posts very interesting this week! There's a lot of good content to read here. The one about memory leak is quite scary 😅.
+J'ai également trouvé des articles de blog communautaires très intéressants cette semaine ! Il y a beaucoup de contenu intéressant à lire ici. Celui sur les fuites de mémoire est assez effrayant 😅.
 
-I have been wondering lately: is it still useful to write a [Twitter thread](https://slo.im/thread)? I've [asked the question on Twitter](https://x.com/sebastienlorber/status/1795377678918554072) and feel like nobody reads it anymore, apart a few people. I'm considering stopping. What do you think? 🤔
+Je me suis demandé dernièrement s'il était encore utile d'écrire un [Fil Twitter](https://slo.im/thread) ? J'ai [posé la question sur Twitter](https://x.com/sebastienlorber/status/1795377678918554072) et j'ai l'impression que plus personne ne le lit, à part quelques personnes. J'envisage d'arrêter. Qu'en pensez-vous ? 🤔
 
 <!-- truncate -->
 
@@ -45,18 +45,18 @@ import Support from "../_support.mdx";
 
 **[Next.js 15 RC](https://nextjs.org/blog/next-15-rc)**
 
-A new major version of Next.js dropped in RC at Vercel Ship last week. The highlights of this version are:
+Une nouvelle version majeure de Next.js est tombée en RC lors du Vercel Ship la semaine dernière. Les points forts de cette version sont les suivants :
 
-- React 19 RC support
-- React Compiler support (experimental) through the Babel plugin (this might increase build time)
-- Hydration error improvements, displaying the diff mismatch
-- Less aggressive caching, now opt-in: `fetch` and Route Handlers are no longer cached by default
-- Incrementally adopt Partial Prerendering with a new `experimental_ppr` route config option
-- New `create-next-app` design, prompting for Turbo usage in dev, and ability to create projects
-- next/after (experimental), a new API useful to defer analytics tasks and keep responses fast
-- Optimizing bundling of external packages (`serverExternalPackages`) now stable
+- Support de React 19 RC
+- Support du compilateur React (expérimental) à travers le plugin Babel (cela peut augmenter le temps de construction)
+- Amélioration des erreurs d'hydratation, affichant le diff incorrect
+- Mise en cache moins agressive, maintenant opt-in : `fetch` et Route Handlers ne sont plus mis en cache par défaut
+- Adoption progressive du Partial Prerendering avec une nouvelle option de configuration de route `experimental_ppr`.
+- Nouveau design de `create-next-app`, invitant à l'utilisation de Turbo en dev, et possibilité de créer des projets
+- next/after (expérimental), une nouvelle API utile pour différer les tâches d'analyse et garder les réponses rapides
+- Optimisation du regroupement des packages externes (`serverExternalPackages`) maintenant stable
 
-Other interesting things were announced at Vercel Ship. Additional resources to look at:
+D'autres choses intéressantes ont été annoncées au Vercel Ship. Ressources supplémentaires à consulter :
 
 - 📜 [Vercel Ship 2024 recap](https://vercel.com/blog/vercel-ship-2024)
 - 📜 [Introducing deeper integrations for feature flags in Vercel](https://vercel.com/blog/feature-flags)
@@ -66,29 +66,29 @@ Other interesting things were announced at Vercel Ship. Additional resources to 
 ---
 
 - 💸 [Build AI apps with React and JavaScript — Frontend and UI for any LLM](https://docs.nlkit.com/nlux/?utm_source=twir-my24-3)
-- 👀 [React Core PR - Throw if React and React DOM versions don't match](https://github.com/facebook/react/pull/29236): React 19 will be stricter and require that the renderer version (DOM or RN) uses the exact same version as the core React package.
-- 👀 [React DOM PR - Add support for Popover API](https://github.com/facebook/react/pull/27981): This new API is now available in all major browsers, and React just merged support for it.
-- 👀 [Next.js PR - `unstable_rethrow`](https://github.com/vercel/next.js/pull/65831): Upcoming Next.js API to avoid catching internal errors thrown by Next.js (such as redirect/notFound errors).
-- 🐦 [Latest SWR beta can seamlessly move data fetching between client-side and server-side](https://x.com/shuding_/status/1794461568505352693). And [React-Query](https://x.com/TkDodo/status/1794801851671695533) + [Apollo Client](https://x.com/phry/status/1795777518944784450) also implemented similar features.
-- 🗓 [React Rally](https://reactrally.com/?utm_source=thisweekinreact) - 🇺🇸 Utah - 12-13, August - Get a 10% discount with code "TWIR". There’s an advanced React [workshop](https://reactrally.com/workshop) with Cory House.
-- 📜 [Sneaky React Memory Leaks: How useCallback and closures can bite you](https://schiener.io/2024-03-03/react-closures): A great article simplifying a real production app memory leak to explain it. This surprised me, I couldn’t guess such React code would leak memory, and pretty sure my apps contain memory leaks now 😅. Good news though: the app wouldn't leak memory when using the new React Compiler.
-- 📜 [Automatic Query Invalidation after Mutations](https://tkdodo.eu/blog/automatic-query-invalidation-after-mutations): React Query is un-opinionated about how you invalidate cached resources and instead lets you implement a custom strategy on top of flexible primitives. For example, you can invalidate queries by tags.
-- 📜 [Migrating from Radix to React Aria: Improving Accessibility and UX](https://argos-ci.com/blog/react-aria-migration): After having used alternatives such as Reakit or Radix, Greg gives good reasons for adopting React Aria. The migration feedback is positive, but some challenges were encountered. React Aria is quite “strict” at ensuring your components remain accessible.
-- 📜 [On Laravel, Full-Stack JavaScript, and Productive Frameworks](https://www.jplhomer.org/posts/on-laravel-full-stack-javascript-and-productive-frameworks/): Josh created 2 React meta-frameworks (including Shopify Hydrogen) and also uses Laravel extensively. He shares an interesting perspective on the pros/cons of the Laravel vs React ecosystem.
-- 📜 [A virtual DOM in 200 lines of JavaScript](https://lazamar.github.io/virtual-dom/): This greatly explains how a virtual DOM (like the one from React) works under the hood, by creating a small library that can run a TodoMVC app.
-- 📜 [Design System Retrospective](https://kyleshevlin.com/design-system-retrospective/): Interesting perspective on the successfulness of implementing a Chakra-like design system (tokens as props). The average dev struggled to understand how to compose primitives. Tailwind might be a better fit for them.
-- 📜 [Combining React Server Components with react-query for Easy Data Management](https://frontendmasters.com/blog/combining-react-server-components-with-react-query-for-easy-data-management/): A good read explaining limits RSCs. Server Actions run serially, and you need to wait for RSCs to re-render which might be slow without proper caching. Using React-Query with prefetching might slightly increase bundle size and produce more roundtrips, but overall that could give a faster UX.
-- 📜 [Using Server Actions with tRPC](https://trpc.io/blog/trpc-actions): Server Actions are similar to tRPC but come barebone. tRPC maintainer explains things that tRPC enables on top, such as auth, input validation, observability, rate-limiting, and other possible middleware. Note there are alternatives to consider such as next-server-action and zsa.
-- 📜 [Optimizing INP for a React App & Performance Learnings](https://www.iamtk.co/optimizing-inp-for-a-react-app-and-performance-learnings): A long feedback on optimizing responsiveness on a React 18 prod app. Various takeaways include deferring work and analytics, or being careful of useless re-renders.
-- 📜 [Partial Prerendering without a framework](https://developers.netlify.com/guides/partial-prerendering-without-a-framework/): Demo from Netlify CEO shows how to implement “vanilla PPR” (without Next.js which has this as an experimental feature).
-- 📜 [Behind the ‘as’ prop: polymorphism done well](https://www.kripod.dev/blog/behind-the-as-prop-polymorphism-done-well/): Also explains how to type it properly.
+- 👀 [React Core PR - Throw if React and React DOM versions don't match](https://github.com/facebook/react/pull/29236) : React 19 sera plus strict et exigera que la version du moteur de rendu (DOM ou RN) utilise exactement la même version que le package central de React.
+- 👀 [React DOM PR - Add support for Popover API](https://github.com/facebook/react/pull/27981) : Cette nouvelle API est désormais disponible dans tous les principaux navigateurs, et React vient d'en fusionner la prise en charge.
+- 👀 [Next.js PR - `unstable_rethrow`](https://github.com/vercel/next.js/pull/65831) : Prochaine API Next.js pour éviter de capturer les erreurs internes lancées par Next.js (telles que les erreurs de redirect/notFound).
+- 🐦 [Latest SWR beta can seamlessly move data fetching between client-side and server-side](https://x.com/shuding_/status/1794461568505352693). Et [React-Query](https://x.com/TkDodo/status/1794801851671695533) + [Apollo Client](https://x.com/phry/status/1795777518944784450) a également mis en œuvre des fonctionnalités similaires.
+- 🗓 [React Rally](https://reactrally.com/?utm_source=thisweekinreact) - 🇺🇸 Utah - 12-13 août - 10% de réduction avec le code « TWIR ». Il y a un [atelier](https://reactrally.com/workshop) React avancé avec Cory House.
+- 📜 [Sneaky React Memory Leaks: How useCallback and closures can bite you](https://schiener.io/2024-03-03/react-closures) : Un super article qui explique une fuite de mémoire dans une vraie application de production. Cela m'a surpris, je ne pouvais pas deviner qu'un tel code React pouvait provoquer une fuite de mémoire, et je suis presque sûr que mes applications contiennent des fuites de mémoire maintenant 😅. Bonne nouvelle cependant : l'application ne présente pas de fuites de mémoire lorsque l'on utilise le nouveau compilateur React.
+- 📜 [Automatic Query Invalidation after Mutations](https://tkdodo.eu/blog/automatic-query-invalidation-after-mutations) : React Query ne se préoccupe pas de la manière dont vous invalidez les ressources mises en cache et vous permet de mettre en œuvre une stratégie personnalisée à partir de primitives flexibles. Par exemple, vous pouvez invalider les requêtes par des tags.
+- 📜 [Migrating from Radix to React Aria: Improving Accessibility and UX](https://argos-ci.com/blog/react-aria-migration) : Après avoir utilisé des alternatives telles que Reakit ou Radix, Greg donne de bonnes raisons d'adopter React Aria. Le retour d'expérience de la migration est positif, mais certains défis ont été rencontrés. React Aria est assez « strict » pour s'assurer que vos composants restent accessibles.
+- 📜 [On Laravel, Full-Stack JavaScript, and Productive Frameworks](https://www.jplhomer.org/posts/on-laravel-full-stack-javascript-and-productive-frameworks/) : Josh a créé 2 méta-frameworks React (dont Shopify Hydrogen) et utilise également Laravel de manière intensive. Il partage une perspective intéressante sur les avantages et les inconvénients de l'écosystème Laravel vs React.
+- 📜 [A virtual DOM in 200 lines of JavaScript](https://lazamar.github.io/virtual-dom/) : Cela explique en grande partie comment un DOM virtuel (comme celui de React) fonctionne sous le capot, en créant une petite bibliothèque qui peut exécuter une application TodoMVC.
+- 📜 [Design System Retrospective](https://kyleshevlin.com/design-system-retrospective/) : Une perspective intéressante sur la réussite de la mise en œuvre d'un système de conception de type Chakra (jetons comme props). Le développeur lambda doit se démener pour comprendre comment composer des primitives. Tailwind pourrait leur convenir davantage.
+- 📜 [Combining React Server Components with react-query for Easy Data Management](https://frontendmasters.com/blog/combining-react-server-components-with-react-query-for-easy-data-management/) : Une bonne lecture expliquant les limites des RSC. Les Server Actions s'exécutent en série, et vous devez attendre que les RSC soient rendus à nouveau, ce qui peut être lent sans une mise en cache appropriée. L'utilisation de React-Query avec prefetching pourrait légèrement augmenter la taille du bundle et produire plus d'allers-retours, mais dans l'ensemble, cela pourrait donner une UX plus rapide.
+- 📜 [Using Server Actions with tRPC](https://trpc.io/blog/trpc-actions) : Les Server Actions sont similaires à tRPC, mais elles sont simples. Le responsable de tRPC explique ce que tRPC permet de faire en plus, comme l'authentification, la validation des inputs, l'observabilité, la réduction du débit, et d'autres middleware possibles. Notez qu'il y a des alternatives à considérer comme next-server-action et zsa.
+- 📜 [Optimizing INP for a React App & Performance Learnings](https://www.iamtk.co/optimizing-inp-for-a-react-app-and-performance-learnings) : Un long retour d'expérience sur l'optimisation de la réactivité d'une application React 18 prod. Parmi les différents enseignements, on peut citer le report du travail et de l'analytique, ou encore faire attention aux re-renders inutiles.
+- 📜 [Partial Prerendering without a framework](https://developers.netlify.com/guides/partial-prerendering-without-a-framework/) : Démonstration du PDG de Netlify montrant comment mettre en œuvre le « vanilla PPR » (sans Next.js qui a cette fonctionnalité expérimentale).
+- 📜 [Behind the ‘as’ prop: polymorphism done well](https://www.kripod.dev/blog/behind-the-as-prop-polymorphism-done-well/) : Il explique également comment le typer correctement.
 - 📜 [Redwood - Using Middleware: RSS and Sitemap](https://redwoodjs.com/blog/using-middleware-rss-and-sitemap)
 - 📜 [Structured logging for Next.js - Using the Pino logging library](https://blog.arcjet.com/structured-logging-in-json-for-next-js/)
 - 📜 [Facebook just updated its relationship status with web components](https://www.mux.com/blog/facebook-just-updated-it-s-relationship-status-with-web-components)
 - 📜 [Authentication with WorkOS in Next.js: A Comprehensive Guide](https://www.nirtamir.com/articles/authentication-with-workos-in-next-js-a-comprehensive-guide)
 - 📜 [The Next.js \<Image> Component](https://www.premieroctet.com/blog/en/next-image-component)
 - 📜 [How To Dockerize A React App](https://scientyficworld.org/how-to-dockerize-a-react-app/)
-- 📦 [Astro 4.9 - React 19 support for Astro Actions](https://astro.build/blog/astro-490/): Adds new withState/getActionState APIs to integrate Astro with React 19 useActionState, including progressive enhancement.
+- 📦 [Astro 4.9 - React 19 support for Astro Actions](https://astro.build/blog/astro-490/) : Ajout de nouvelles API withState/getActionState pour intégrer Astro avec React 19 useActionState, y compris l'amélioration progressive.
 - 📦 [Storybook 8.1 - typesafe mocking, Unit testing React Server Components](https://storybook.js.org/blog/storybook-8-1/)
 - 📦 [NextUI 2.4](https://nextui.org/blog/v2.4.0)
 - 📦 [Ark UI 3.0](https://ark-ui.com/react/docs/overview/changelog#300---2024-05-24)
@@ -96,7 +96,7 @@ Other interesting things were announced at Vercel Ship. Additional resources to 
 - 📦 [Redwood 7.6 - React Compiler experimental flag](https://github.com/redwoodjs/redwood/releases/tag/v7.6.0)
 - 📦 [zsa 0.1 - Typesafe Server Actions for Next.js](http://next.js)
 - 📦 [React-Executor - Asynchronous task execution and state management for React](https://github.com/smikhalevski/react-executor)
-- 🎥 [UI Engineering - Portals Can Share State Between Windows](https://www.youtube.com/watch?v=jZx33FPMXzc): It's a pretty cool idea to use React portals to integrate seamlessly between windows and might also be useful for the upcoming browser Picture-in-Picture API.
+- 🎥 [UI Engineering - Portals Can Share State Between Windows](https://www.youtube.com/watch?v=jZx33FPMXzc) : L'idée d'utiliser des portals React pour s'intégrer de manière transparente entre les fenêtres est plutôt cool et pourrait également être utile pour la future API Picture-in-Picture du navigateur.
 - 🎥 [Theo - I Was Wrong About React Router.](https://www.youtube.com/watch?v=m86HssTKExU)
 - 🎥 [James Quick - Astro Launches Actions Similar like Next.js](https://www.youtube.com/watch?v=8mIUIhp2YGQ)
 
